[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://img/TEST_MainBG.png" type="Texture" id=2]
[ext_resource path="res://fonts/djv_mono.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/djv_bold_italic.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/djv_italic.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/djv_bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/djv_sans.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/dejavu/DejaVuSans-BoldOblique.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/UI/Menu/User_Settings.tscn" type="PackedScene" id=9]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[sub_resource type="GradientTexture" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.654902, 0.129412, 0.129412, 1 )
albedo_texture = SubResource( 2 )
roughness = 0.0

[sub_resource type="CanvasItemMaterial" id=4]
next_pass = SubResource( 3 )
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 2

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 8 )

[node name="Spatial" type="Control"]
margin_left = 7.0
margin_top = 3.0
margin_right = 1004.0
margin_bottom = 694.0
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -1.0
margin_right = 973.0
margin_bottom = 662.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="main" type="Control" parent="ui"]
margin_right = 40.0
margin_bottom = 40.0

[node name="pHelp" type="Panel" parent="ui/main"]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
material = SubResource( 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = 376.0
margin_top = 71.0
margin_right = 866.0
margin_bottom = 671.0

[node name="RichTextLabel" type="RichTextLabel" parent="ui/main/pHelp"]
self_modulate = Color( 0.929412, 0.862745, 0.862745, 1 )
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 9.0
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[b]To move use your keyboard and mouse[/b]
        [b]W[/b] or [i]Up arrow[/i] - Forward
        [b]S[/b] or [i]Down arrow[/i] - Backward
        [b]A[/b] or [i]Left arrow[/i] - Sideways left
        [b]D[/b] or [i]Right arrow[/i] - Sideways right
        [b]Q[/b] or [i]Page Up[/i] - Move Up
        [b]E[/b] or [i]Page Down[/i] - Move Down
		
[b]Scroll wheel[/b]
         - scroll up - move faster
         - scroll down - move slower

[b]In game[/b]
Press Esc to see a menu with options for your mouse, general speed, and others.
If the app is running slowly, try reducing the setting for Far. This limits how far away the camera can see.

Press Esc again to close the menu.
"
text = "To move use your keyboard and mouse
        W or Up arrow - Forward
        S or Down arrow - Backward
        A or Left arrow - Sideways left
        D or Right arrow - Sideways right
        Q or Page Up - Move Up
        E or Page Down - Move Down
		
Scroll wheel
         - scroll up - move faster
         - scroll down - move slower

In game
Press Esc to see a menu with options for your mouse, general speed, and others.
If the app is running slowly, try reducing the setting for Far. This limits how far away the camera can see.

Press Esc again to close the menu.
"

[node name="Panel" type="Panel" parent="ui/main"]
material = SubResource( 5 )
margin_left = 178.0
margin_top = 374.0
margin_right = 388.0
margin_bottom = 674.0

[node name="VBoxContainer" type="VBoxContainer" parent="ui/main/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="Instructions" type="Button" parent="ui/main/Panel/VBoxContainer"]
margin_right = 210.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Instructions"

[node name="Run" type="Button" parent="ui/main/Panel/VBoxContainer"]
margin_top = 50.0
margin_right = 210.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 40 )
action_mode = 0
text = "Run"

[node name="Options" type="Button" parent="ui/main/Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 210.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )
text = "Options"

[node name="Display" type="Button" parent="ui/main/Panel/VBoxContainer"]
margin_top = 150.0
margin_right = 210.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 40 )
disabled = true
text = "Display"

[node name="RunNet" type="Button" parent="ui/main/Panel/VBoxContainer"]
margin_top = 200.0
margin_right = 210.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 40 )
action_mode = 0
text = "Run Multiplayer"

[node name="CfgPlayer" type="Button" parent="ui/main/Panel/VBoxContainer"]
margin_top = 250.0
margin_right = 210.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 40 )
action_mode = 0
text = "Change player settings"

[node name="loading" type="Control" parent="ui"]
visible = false
margin_right = 273.0
margin_bottom = 79.0

[node name="Label" type="Label" parent="ui/loading"]
margin_left = 3.0
margin_top = 2.0
margin_right = 241.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 6 )
text = "Loading ..."

[node name="load_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PlayerSettings" parent="." instance=ExtResource( 9 )]
margin_left = 93.0
margin_top = 579.0
margin_right = 133.0
margin_bottom = 619.0

[connection signal="pressed" from="ui/main/Panel/VBoxContainer/Instructions" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="ui/main/Panel/VBoxContainer/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="ui/main/Panel/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="ui/main/Panel/VBoxContainer/RunNet" to="." method="_on_RunNet_pressed"]
[connection signal="pressed" from="ui/main/Panel/VBoxContainer/CfgPlayer" to="PlayerSettings" method="_on_CfgPlayer_pressed"]
[connection signal="timeout" from="load_timer" to="." method="_on_Timer_timeout"]
